banner section done

--- a/index.html
+++ b/index.html
@@ -6,5 +6,22 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <!-- header start here -->
+    <header class="header_container">
+      <div class="banner_content">
+        <p>Happy New Year</p>
+        <h1>
+          New Year Party <br />
+          Celebration
+        </h1>
+      </div>
+    </header>
+    <main>
+      <!-- 65% section starts here -->
+      <section></section>
+      <!-- 65% section ends here -->
+    </main>
+    <footer></footer>
+  </body>
 </html>
