second section done

--- a/index.html
+++ b/index.html
@@ -19,7 +19,16 @@
     </header>
     <main>
       <!-- 65% section starts here -->
-      <section></section>
+      <section class="second_section_container">
+        <div class="second_section_content">
+          <h2>65% OFF</h2>
+          <p>OUR HOLIDAY DEALS ARE BETTER</p>
+          <h3>ALL CATEGORIES</h3>
+        </div>
+        <div class="second_section_image">
+          <img src="/images/New Year Photo.png" alt="" />
+        </div>
+      </section>
       <!-- 65% section ends here -->
     </main>
     <footer></footer>
