third section done

--- a/index.html
+++ b/index.html
@@ -30,6 +30,25 @@
         </div>
       </section>
       <!-- 65% section ends here -->
+      <!-- Midnight party section start here -->
+      <section class="midnight_party_container">
+        <div class="left_side_content">
+          <h2>
+            Welcome to <br />
+            midnight party
+          </h2>
+          <p>
+            Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
+            molestie malesuada. Ipsum sed sodales risus ut pellentesque vel
+            euismod.
+          </p>
+          <span>Join Now</span>
+        </div>
+        <div class="right_side_content">
+          <img src="/images/Group 70.png" alt="" />
+        </div>
+      </section>
+      <!-- Midnight party section ends here -->
     </main>
     <footer></footer>
   </body>
